# baseball-pitch-simulator

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
api/: Dockerfile  main.py  predict.py  schemas.py
api/tests/: test_predict.py
docs/: DEVELOPMENT_LOG.md  PROJECT_SPEC.md  architecture.md
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/api/: client.ts  hooks.ts  types.ts
frontend/src/components/: BatterPanel.tsx  ButtonGroup.tsx  PitchTypeSelector.tsx  PitcherSelector.tsx  ProbabilityChart.tsx  ResultsPanel.tsx  SituationPanel.tsx  StrikeZone.tsx
ml/: arsenal.py  benchmark_shap_latency.py  explain.py  features.py  ingest.py  labels.py  modeling.py  train_bip_outcome.py  train_pitch_outcome.py
ml/tests/: test_explain.py  test_features.py  test_labels.py  test_modeling.py
notebooks/: 01_eda.ipynb
