[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "baseball-pitch-simulator"
version = "0.1.0"
requires-python = ">=3.10"

# ── Black ──────────────────────────────────────────────────────────────────────
[tool.black]
line-length = 88
target-version = ["py310", "py311"]

# ── Ruff ───────────────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]  # line length handled by black

[tool.ruff.lint.per-file-ignores]
"api/tests/*" = ["S101"]  # allow assert in tests

# ── isort ──────────────────────────────────────────────────────────────────────
[tool.isort]
profile = "black"
line_length = 88

# ── pytest ─────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["api/tests"]
